<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2026 XephiraOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Live Telemetry & Glass Engine Hero Preview -->
    <Preference
        android:key="pref_hero_preview"
        android:order="-100"
        android:layout="@layout/xephira_lab_hero_preview"
        android:selectable="false" />

    <PreferenceCategory
        android:title="CUSTOMIZATION DOMAINS"
        app:iconSpaceReserved="false">

        <!-- 1. Liquid Glass Optics -->
        <Preference
            android:key="sub_optics"
            android:order="1"
            android:icon="@drawable/ic_lab_optics"
            android:title="@string/submenu_optics_title"
            android:summary="@string/submenu_optics_summary"
            android:fragment="org.xephira.lab.fragments.OpticsFragment" />

        <!-- 2. Spatial Kinetic Physics -->
        <Preference
            android:key="sub_kinetic"
            android:order="2"
            android:icon="@drawable/ic_lab_kinetic"
            android:title="@string/submenu_kinetic_title"
            android:summary="@string/submenu_kinetic_summary"
            android:fragment="org.xephira.lab.fragments.KineticFragment" />

        <!-- 3. Continuous Curvature Studio -->
        <Preference
            android:key="sub_curvature"
            android:order="3"
            android:icon="@drawable/ic_lab_curvature"
            android:title="@string/submenu_curvature_title"
            android:summary="@string/submenu_curvature_summary"
            android:fragment="org.xephira.lab.fragments.CurvatureFragment" />

        <!-- 4. Flux Silicon & Memory Turbo -->
        <Preference
            android:key="sub_flux"
            android:order="4"
            android:icon="@drawable/ic_lab_flux"
            android:title="@string/submenu_flux_title"
            android:summary="@string/submenu_flux_summary"
            android:fragment="org.xephira.lab.fragments.FluxFragment" />

        <!-- 5. Aura Accent & Theming Studio -->
        <Preference
            android:key="sub_aura"
            android:order="5"
            android:icon="@drawable/ic_lab_aura"
            android:title="@string/submenu_aura_title"
            android:summary="@string/submenu_aura_summary"
            android:fragment="org.xephira.lab.fragments.AuraFragment" />

        <!-- 6. Lock Screen & Spatial Depth Studio -->
        <Preference
            android:key="sub_lockscreen"
            android:order="6"
            android:icon="@drawable/ic_lab_lockscreen"
            android:title="@string/submenu_lockscreen_title"
            android:summary="@string/submenu_lockscreen_summary"
            android:fragment="org.xephira.lab.fragments.LockscreenFragment" />

        <!-- 7. Status Bar & Dynamic Capsule -->
        <Preference
            android:key="sub_statusbar"
            android:order="7"
            android:icon="@drawable/ic_lab_statusbar"
            android:title="@string/submenu_statusbar_title"
            android:summary="@string/submenu_statusbar_summary"
            android:fragment="org.xephira.lab.fragments.StatusBarFragment" />

        <!-- 8. Quick Settings & Aquamorphic Grid -->
        <Preference
            android:key="sub_quicksettings"
            android:order="8"
            android:icon="@drawable/ic_lab_quicksettings"
            android:title="@string/submenu_quicksettings_title"
            android:summary="@string/submenu_quicksettings_summary"
            android:fragment="org.xephira.lab.fragments.QuickSettingsFragment" />

        <!-- 9. Gestures & Fluid Navigation -->
        <Preference
            android:key="sub_gestures"
            android:order="9"
            android:icon="@drawable/ic_lab_gestures"
            android:title="@string/submenu_gestures_title"
            android:summary="@string/submenu_gestures_summary"
            android:fragment="org.xephira.lab.fragments.GesturesFragment" />

    </PreferenceCategory>

</PreferenceScreen>
